gD: revise tag-directory headers to look inside tag-directory for an 'abstract.md'
The old approach of looking inside /note/ was not working: /note/ conceptually wasn't making sense and the indirection was ugly and confusing. it makes more sense to associate the /note/tag.md as closely as possible with the tag-directory (and resolves the collision problem too). especially as it becomes clear that the /note/ idea didn't work (and the goal of 'lightweight' pages is better handled by /blog/ right now).

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12446,3 +12446,66 @@ default "";
 "~^/doc/statistics/bayes/2013-kruschke.pdf.*$" "/doc/statistics/bayes/2012-kruschke.pdf";
 "~^/doc/statistics/bias/2009-welton.pdf.*$" "/doc/statistics/bias/2008-welton.pdf";
 "~^/doc/fiction/science-fiction/frank-herbert/2013-normanspinrad-duneintroduction-germanedition.txt.*$" "/doc/fiction/science-fiction/frank-herbert/2013-normanspinrad-duneintroduction-germanedition.html";
+"~^/doc/statistics/bias/2012-fanelli.pdf.*$" "/doc/statistics/bias/publication/2011-fanelli.pdf";
+"~^/doc/statistics/bias/publication/2008-scherer.pdf.*$" "/doc/statistics/bias/publication/2007-scherer.pdf";
+"~^/doc/statistics/power-analysis/2009-aguinis.pdf.*$" "/doc/statistics/power-analysis/2008-aguinis.pdf";
+"~^/doc/statistics/prediction/2006-trevena.pdf.*$" "/doc/statistics/prediction/2005-trevena.pdf";
+"~^/doc/technology/2014-ahmed.pdf.*$" "/doc/technology/2015-ahmed.pdf";
+
+# unwind the /note/ tag-abstract/hierarchy attempt:
+"~^/note/dynamic-evaluation.md$" "/doc/ai/nn/dynamic-evaluation/abstract.md";
+"~^/note/fully-connected.md$" "/doc/ai/nn/fully-connected/abstract.md";
+"~^/note/sparsity.md$" "/doc/ai/nn/sparsity/abstract.md";
+"~^/note/tokenization.md$" "/doc/ai/nn/tokenization/abstract.md";
+"~^/note/attention.md$" "/doc/ai/nn/transformer/attention/abstract.md";
+"~^/note/inner-monologue.md$" "/doc/ai/nn/transformer/gpt/inner-monologue/abstract.md";
+"~^/note/lamda.md$" "/doc/ai/nn/transformer/gpt/lamda/abstract.md";
+"~^/note/scaling.md$" "/doc/ai/scaling/abstract.md";
+"~^/note/booger.md$" "/doc/biology/booger/abstract.md";
+"~^/note/nashx.md$" "/doc/bitcoin/nashx/abstract.md";
+"~^/note/sentence-spacing.md$" "/doc/design/typography/sentence-spacing/abstract.md";
+"~^/note/automation.md$" "/doc/economics/automation/abstract.md";
+"~^/note/metcalfes-law.md$" "/doc/economics/automation/metcalfes-law/abstract.md";
+"~^/note/georgism.md$" "/doc/economics/georgism/abstract.md";
+"~^/note/emergenesis.md$" "/doc/genetics/heritable/emergenesis/abstract.md";
+"~^/note/s-l-a-marshall.md$" "/doc/history/s-l-a-marshall/abstract.md";
+"~^/note/newest.md$" "/doc/newest/abstract.md";
+"~^/note/frank-ramsey.md$" "/doc/philosophy/frank-ramsey/abstract.md";
+"~^/note/elon-musk.md$" "/doc/psychiatry/bipolar/elon-musk/abstract.md";
+"~^/note/traumatic-brain-injury.md$" "/doc/psychiatry/traumatic-brain-injury/abstract.md";
+"~^/note/illusion-of-depth.md$" "/doc/psychology/cognitive-bias/illusion-of-depth/abstract.md";
+"~^/note/european-journal-of-parapsychology.md$" "/doc/psychology/parapsychology/european-journal-of-parapsychology/abstract.md";
+"~^/note/mode-collapse.md$" "/doc/reinforcement-learning/preference-learning/mode-collapse/abstract.md";
+"~^/note/abandoned-footnotes.md$" "/doc/sociology/abandoned-footnotes/abstract.md";
+"~^/note/animal.md$" "/doc/statistics/bias/animal/abstract.md";
+"~^/note/variance-component.md$" "/doc/statistics/variance-component/abstract.md";
+"~^/note/fermi.md$" "/doc/science/fermi-problem/abstract.md";
+"~^/note/killing-rabbits.md$" "/doc/fiction/poetry/1963-valek-killingrabbits";
+"~^/note/dynamic-evaluation$" "/doc/ai/nn/dynamic-evaluation/index";
+"~^/note/fully-connected$" "/doc/ai/nn/fully-connected/index";
+"~^/note/sparsity$" "/doc/ai/nn/sparsity/index";
+"~^/note/tokenization$" "/doc/ai/nn/tokenization/index";
+"~^/note/attention$" "/doc/ai/nn/transformer/attention/index";
+"~^/note/inner-monologue$" "/doc/ai/nn/transformer/gpt/inner-monologue/index";
+"~^/note/lamda$" "/doc/ai/nn/transformer/gpt/lamda/index";
+"~^/note/scaling$" "/doc/ai/scaling/index";
+"~^/note/booger$" "/doc/biology/booger/index";
+"~^/note/nashx$" "/doc/bitcoin/nashx/index";
+"~^/note/sentence-spacing$" "/doc/design/typography/sentence-spacing/index";
+"~^/note/automation$" "/doc/economics/automation/index";
+"~^/note/metcalfes-law$" "/doc/economics/automation/metcalfes-law/index";
+"~^/note/georgism$" "/doc/economics/georgism/index";
+"~^/note/emergenesis$" "/doc/genetics/heritable/emergenesis/index";
+"~^/note/s-l-a-marshall$" "/doc/history/s-l-a-marshall/index";
+"~^/note/newest$" "/doc/newest/index";
+"~^/note/frank-ramsey$" "/doc/philosophy/frank-ramsey/index";
+"~^/note/elon-musk$" "/doc/psychiatry/bipolar/elon-musk/index";
+"~^/note/traumatic-brain-injury$" "/doc/psychiatry/traumatic-brain-injury/index";
+"~^/note/illusion-of-depth$" "/doc/psychology/cognitive-bias/illusion-of-depth/index";
+"~^/note/european-journal-of-parapsychology$" "/doc/psychology/parapsychology/european-journal-of-parapsychology/index";
+"~^/note/mode-collapse$" "/doc/reinforcement-learning/preference-learning/mode-collapse/index";
+"~^/note/abandoned-footnotes$" "/doc/sociology/abandoned-footnotes/index";
+"~^/note/animal$" "/doc/statistics/bias/animal/index";
+"~^/note/variance-component$" "/doc/statistics/variance-component/index";
+"~^/note/fermi$" "/doc/science/fermi-problem/abstract";
+"~^/note/killing-rabbits$" "/doc/fiction/poetry/1963-valek-killingrabbits";
