--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -208,7 +208,7 @@ server {
         rewrite ^/doc/2020-crc/(?<original>.*) /$original permanent;
         rewrite ^/doc/docs/(?<original>.*) /$original permanent;
         rewrite ^/doc/images/(?<original>.*) /doc/$original permanent;
-        rewrite ^/image/images/(?<original>.*) /images/$original permanent;
+        rewrite ^/image/images/(?<original>.*) /image/$original permanent;
         rewrite ^/doc/iq/docs/(?<original>.*) /doc/$original permanent;
         rewrite ^/doc/tags/(?<original>.*) /tags/$original permanent;
         rewrite ^/doc/www/au.news.yahoo.com/Chrome/(?<original>.*) /$original permanent;
@@ -467,8 +467,8 @@ server {
         rewrite ^/(?<original>.*)\&sa=.*$ /$original permanent;
         rewrite ^/doc/eva/doc/eva/(?<original>.*)$ /doc/eva/$original permanent;
         rewrite ^/(?<original>.*)\&lang=en$ /$original permanent;
-        rewrite ^/image%25252F(?<original>.*)$ /images/$original permanent;
-        rewrite ^/image%25252Fthumbnails%25252Fwikipedia%25252F(?<original>.*)$ /images/thumbnails/wikipedia/$original permanent;
+        rewrite ^/image%25252F(?<original>.*)$ /image/$original permanent;
+        rewrite ^/image%25252Fthumbnails%25252Fwikipedia%25252F(?<original>.*)$ /image/thumbnails/wikipedia/$original permanent;
         rewrite ^/(?<original>doc/.*\.pdf)The$ /$original permanent;
         rewrite ^/(?<original>.*)\&spec\=ft100x75$ /$original permanent;
         rewrite ^/(?<original>.*)\'A\=0$ /$original permanent;
