--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9465,7 +9465,7 @@ default "";
 "~^/doc/economics/mechanism-design/1981-myerson.pdf.*$" "/doc/economics/mechanism-design/auction/1981-myerson.pdf";
 "~^/doc/economics/mechanism-design/1982-rassenti.pdf.*$" "/doc/economics/mechanism-design/auction/1982-rassenti.pdf";
 "~^/doc/economics/1973-cheung.pdf.*$" "/doc/economics/mechanism-design/1973-cheung.pdf";
-"~^/doc/newest/[a-hj-z].*$" "/doc/newest/index";
+"~^/doc/newest/[b-hj-z0-9].*$" "/doc/newest/index";
 "~^/doc/psychology/linguistics/2017-mukadam.pdf.*$" "/doc/psychology/linguistics/bilingual/2017-mukadam.pdf";
 "~^/doc/psychology/linguistics/2019-antoniou.pdf.*$" "/doc/psychology/linguistics/bilingual/2019-antoniou.pdf";
 "~^/doc/psychology/linguistics/2020-nichols.pdf.*$" "/doc/psychology/linguistics/bilingual/2020-nichols.pdf";
