+; began much more aggressive /note/ refactoring by splitting out ones that should've been a tag but weren't before (hunting lions, regression to the mean, parasociality, lizardman)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -131,7 +131,7 @@ server {
         rewrite ^/static/css/head\.css$  /static/css/head-VERSIONED.css last;
         rewrite ^/static/css/style\.css$ /static/css/style-VERSIONED.css last;
 
-        rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.*$ /$old permanent; # exclude /static/ because of file versioning
+        rewrite ^/(?<old>[a-rt-z][a-su-z][b-z][a-su-z][a-hj-z][a-bd-z].*)\?.+$ /$old permanent; # exclude /static/ because of file versioning
         rewrite ^/(?<original>.*)\?chat$ /$original permanent;
         rewrite ^/(?<original>.*)\?feedback.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
@@ -887,7 +887,7 @@ server {
         rewrite ^/(?<old>.*)-530px.jpg$ /$old permanent;
         rewrite ^/(?<old>.*)-768px\.[jp][pn]g$ /$old permanent;
 
-        rewrite ^/image/(?<old>.*)$ /doc/$old permanent;
+        rewrite ^/image/(?<old>.+)$ /doc/$old permanent;
         rewrite ^/genetics/(?<old>.*)$ /doc/genetics/$old permanent;
         rewrite ^/doc/gan/stylegan/(?<old>.*)$ /doc/ai/nn/gan/stylegan/$old permanent;
         rewrite ^/(?<old>.*)，.*$ /$old permanent;
@@ -1042,7 +1042,7 @@ server {
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
         rewrite ^//(?<original>.+)$ /$original permanent;
-        rewrite ^/(?<original>[A-Za-z0-9-]+)/$ /$original permanent; # try to deal with the spiders bruteforcing appending '/' to all essays like '/self-decrypting/'
+        # rewrite ^/(?<original>[A-Za-z0-9-]+)/$ /$original permanent; # try to deal with the spiders bruteforcing appending '/' to all essays like '/self-decrypting/' ; although this breaks stuff like '/nootropic' by creating an infinite loop...?
         # rewrite ^/(?<original>[A-Za-z0-9-]+/[a-z0-9-]+)/$ /$original permanent; # BAD creates loops!
 
         # Gitit dot-page → Markdown .md migration:
