--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12551,3 +12551,9 @@ default "";
 "~^/doc/statistics/bayes/2000-wainer.pdf.*$" "/doc/statistics/bayes/regression-to-mean/2000-wainer.pdf";
 "~^/doc/statistics/bayes/2006-wainer.pdf.*$" "/doc/statistics/bayes/regression-to-mean/2006-wainer.pdf";
 "~^/doc/statistics/bayes/2019-wright.pdf.*$" "/doc/statistics/bayes/regression-to-mean/2019-wright.pdf";
+"~^/parasocial$" "/doc/sociology/technology/parasocial/index";
+"~^/regression-to-mean$" "/doc/statistics/bayes/regression-to-mean/index";
+"~^/doc/statistics/bayes/1990-stigler.pdf.*$" "/doc/statistics/bayes/regression-to-mean/1990-stigler.pdf";
+"~^/doc/wikipedia/2022-hinnosaar.pdf.*$" "/doc/wikipedia/2021-hinnosaar.pdf";
+"~^/doc/zeo/2021-guarana.pdf.*$" "/doc/zeo/2020-guarana.pdf";
+"~^/doc/darknet-market/2024-cuevas.pdf.*$" "/doc/darknet-market/silk-road/1/2024-cuevas.pdf";
