--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -1991,7 +1991,9 @@
 "~^/doc/[a-km-z].*/Dying-Outside.*$" "/fiction/dying-outside";
 "~^/fiction/Dying-Outside.html$" "/fiction/dying-outside";
 "~^/fiction/Dying-Outside/index.html$" "/fiction/dying-outside";
-"~^/semaglutide$" "/newsletter/2021/02#semaglutide";
+"~^/semaglutide$" "/doc/longevity/glp/semaglutide/index";
+"~^/glp$" "/doc/longevity/glp/index";
+"~^/glp-1$" "/doc/longevity/glp/index";
 "~^/doc/www/beza1e1.tuxen.de/null$" "http://beza1e1.tuxen.de/";
 "~^/haskell/Sum-mers-of-Code,-2006-2013$" "/haskell/summer-of-code";
 "~^/Summer-of-Code$" "/haskell/summer-of-code";
@@ -20524,10 +20526,10 @@ ortraitfaces-1.png";
 "~^/rss/$" "https://gwern.substack.com/feed";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
-"~/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
-"~/.+/%E2%82%BF[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
-"~/.+/₿[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
-"~/.+/฿[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
+"~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
+"~^/.+/%E2%82%BF[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
+"~^/.+/₿[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
+"~^/.+/฿[12][0-9][0-9][0-9]-[0-1][0-9]-[0-3][0-9]$" "/404";
 "~^/testing-put.*$" "/404";
 "~^/seiPhone-screen.*$" "/404";
 "~^/room/.*$" "/404";
