--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12557,3 +12557,4 @@ default "";
 "~^/doc/wikipedia/2022-hinnosaar.pdf.*$" "/doc/wikipedia/2021-hinnosaar.pdf";
 "~^/doc/zeo/2021-guarana.pdf.*$" "/doc/zeo/2020-guarana.pdf";
 "~^/doc/darknet-market/2024-cuevas.pdf.*$" "/doc/darknet-market/silk-road/1/2024-cuevas.pdf";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-berserk-dnddragon-donotsummonupthatwhichyoucannotputdown.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-dnddragon-donotsummonupthatwhichyoucannotputdown.png";
