--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -19688,7 +19688,7 @@
 "~^/note/tbi\.md$" "/note/traumatic-brain-injury";
 "~^/metadata/annotations/https%253A%252F%252Fen.wikipedia.org%252Fwiki%252FVaping-associated_pulmonary_injury.html$" "https://en.wikipedia.org/wiki/Vaping-associated_pulmonary_injury";
 "~^/conversation/steven_pinker-writing-in-the-21st-century$" "https://www.edge.org/conversation/steven_pinker-writing-in-the-21st-century";
-"~^/Paracosm.*$" "/questions#fantasy";
+"~^/[Pp]aracosm.*$" "/doc/psychology/personality/fantasizing/index";
 "~^/ai-safety.*$" "/index#ai-safety";
 "~^/The-Melancholy%252$" "/the-melancholy-of-subculture-society";
 "~^/The-Melanc$" "/the-melancholy-of-subculture-society";
@@ -20524,6 +20524,8 @@ ortraitfaces-1.png";
 "~^/tool-aiC$" "/tool-ai";
 "~^/atom/$" "https://gwern.substack.com/feed";
 "~^/rss/$" "https://gwern.substack.com/feed";
+"~^/[Ff]antasizing.*$" "/doc/psychology/personality/fantasizing/index";
+"~^/[Dd]day-?dream.*$" "/doc/psychology/personality/fantasizing/index";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
