--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12558,3 +12558,4 @@ default "";
 "~^/doc/zeo/2021-guarana.pdf.*$" "/doc/zeo/2020-guarana.pdf";
 "~^/doc/darknet-market/2024-cuevas.pdf.*$" "/doc/darknet-market/silk-road/1/2024-cuevas.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-berserk-dnddragon-donotsummonupthatwhichyoucannotputdown.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-dnddragon-donotsummonupthatwhichyoucannotputdown.png";
+"~^/r-a-lafferty$" "/doc/fiction/science-fiction/r-a-lafferty/index";
