--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12559,3 +12559,5 @@ default "";
 "~^/doc/darknet-market/2024-cuevas.pdf.*$" "/doc/darknet-market/silk-road/1/2024-cuevas.pdf";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-berserk-dnddragon-donotsummonupthatwhichyoucannotputdown.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-23-gwern-midjourneyv6-dnddragon-donotsummonupthatwhichyoucannotputdown.png";
 "~^/r-a-lafferty$" "/doc/fiction/science-fiction/r-a-lafferty/index";
+"~^/r-a-lafferty$" "/doc/fiction/science-fiction/r-a-lafferty/index";
+"~^/fantasizing$" "/doc/psychology/personality/fantasizing/index";
