--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -101,6 +101,7 @@ server {
           video/mp4 mkv;
           application/font-sfnt otf;
           text/x-gtx gtx; # Gwern.net custom format
+          application/x-par2 par2;
           }
 
         # force text files into UTF-8 to avoid 'mojibake':
@@ -874,7 +875,7 @@ server {
         rewrite ^/(?<old>.*)\.page\.html$ /$old.md.html permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
-        rewrite ^/(?<first>.*)\+(?<second>.*)$ /$first-$second permanent;
+        rewrite ^/(?<first>.*)\+(?<second>[^0-9][^0-9]*)$ /$first-$second permanent; # WARNING: PAR2 files have '+' required in them, like 'ecc.vol127+73.par2'
         rewrite ^/tatic/(?<old>.*)$ /static/$old permanent;
         rewrite ^/doc/anime/eva/anime/eva/(?<old>.*)$ /doc/anime/eva/$old permanent;
         rewrite ^/(?<old>.*)/index/wp$ /$old/index permanent;
