--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20526,6 +20526,29 @@ ortraitfaces-1.png";
 "~^/rss/$" "https://gwern.substack.com/feed";
 "~^/[Ff]antasizing.*$" "/doc/psychology/personality/fantasizing/index";
 "~^/[Dd]day-?dream.*$" "/doc/psychology/personality/fantasizing/index";
+"~^/.*worm.\.[pP]h[pP][0-9]$" "/404";
+"~^/.*ssl_check\.php.*$" "/404";
+"~^/sleepster.*$" "/404";
+"~^/rest-api.*$" "/404";
+"~^/inclusioni2000sm$" "/inclusionism";
+"~^/Helper/.*$" "/404";
+"~^/.*/File.ashx.*$" "/404";
+"~^/.*ern1\.[pP]h[pP][0-9]$" "/404";
+"~^/doc/smilies/.*$" "/404";
+"~^/doc/resumes/.*$" "/404";
+"~^/.*/IMG_contenidos/.*$" "/404";
+"~^/.*/strenms\.php$" "/404";
+"~^/.*/blog\.php7$" "/404";
+"~^/doc/headers/$" "/doc/index";
+"~^/doc/psychology/okcupid/howyourraceaffectsthemessages$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/ai/music/2020-04-18-gpt2-midi-popmidi-2.mp3$" "/doc/ai/music/2020-04-18-gpt2-midi-popmidi-30.mp3";
+"~^/maint/$" "/index";
+"~^/doc/resource/.*$" "/doc/index";
+"~^/Text/$" "/index";
+"~^/rubiks-cube-claude/.*$" "/rubiks-cube-claude";
+"~^/scalinghypothesis$" "/scaling-hypothesis";
+"~^/philo/$" "/doc/philosophy/index";
+"~^/static/font/dropcap/Yinit-C.ttf$" "/static/font/dropcap/yinit/Yinit-C.ttf";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
