--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12561,3 +12561,8 @@ default "";
 "~^/r-a-lafferty$" "/doc/fiction/science-fiction/r-a-lafferty/index";
 "~^/r-a-lafferty$" "/doc/fiction/science-fiction/r-a-lafferty/index";
 "~^/fantasizing$" "/doc/psychology/personality/fantasizing/index";
+"~^/doc/fiction/science-fiction/1998-bradbury-nightcallcollect.pdf.*$" "/doc/fiction/science-fiction/1969-bradbury-nightcallcollect.pdf";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-1-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-1.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-2-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-2.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-3-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-3.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-4-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-4.png";
