--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20549,6 +20549,88 @@ ortraitfaces-1.png";
 "~^/scalinghypothesis$" "/scaling-hypothesis";
 "~^/philo/$" "/doc/philosophy/index";
 "~^/static/font/dropcap/Yinit-C.ttf$" "/static/font/dropcap/yinit/Yinit-C.ttf";
+"~^/.*erin1\.[pP]h[pP]7.*$" "/404";
+"~^/doc/spacedrepetition/2014-wozniak\.pdf.*$" "https://www.supermemo.com/";
+"~^/Text/Diff.*$" "https://hackage.haskell.org/package/Diff";
+"~^/note/attention\?.*$" "/note/attention";
+"~^/de/internet.php.*$" "/404";
+"~^/\(sic\)nesses.*$" "/blog/2024-sick-kids";
+"~^/see2d3.com$" "/404";
+"~^/rss/order/.*$" "/404";
+"~^/rss/catalog/.*$" "/rss";
+"~^/oscar-static/.*$" "/404";
+"~^/Notes/home.*$" "/note/note";
+"~^/note/elon-musk\?.*$" "/note/elon-musk";
+"~^/HzS.*$" "/index";
+"~^/doc/www/figwheel/.*$" "/404";
+"~^/doc/www/devtools/.*$" "/404";
+"~^/doc/www/clojure/.*$" "/404";
+"~^/doc/www/cljs/.*$" "/404";
+"~^/doc/spam_vaccine/a.*$" "/404";
+"~^/doc/ro-What.*/library/culture/lottery-winners/index$" "/doc/rotten.com/library/culture/lottery-winners/index.html";
+"~^/doc/rotten.*/fiction/genshiken$" "/fiction/genshiken";
+"~^/doc/radiance/1995-scholz-radiance-plaintext.txt/.*$" "/doc/radiance/1995-scholz-radiance-plaintext.txt";
+"~^/doc/psychology/music/distraction/1999-furnham.pdf.-Acce.*$" "/doc/psychology/music/distraction/1999-furnham.pdf";
+"~^/doc/personal/2011-%C3%83%C2%B0.*$" "/doc/personal/index";
+"~^/doc/iq/2025-edwards.pdf%D0%97%D.*$" "/doc/iq/2025-edwards.pdf";
+"~^/doc/gwern.net/index$" "/doc/index";
+"~^/doc/economics/The-Achievement-Motivation.*$" "https://www.amazon.com/Achievement-Motive-David-C-McClelland/dp/1614278237";
+"~^/doc/economics/McClelland,-D.C.-1975.-The-Achievement-Motivatio.*$" "https://www.amazon.com/Achievement-Motive-David-C-McClelland/dp/1614278237";
+"~^/doc/anime/eva/2005-sawaragi-on-the.*$" "/doc/anime/eva/2005-sawaragi";
+"~^/do...0-margaryan\.pdf.*$" "/doc/genetics/selection/natural/human/2020-margaryan.pdf";
+"~^/delegate/.*$" "/404";
+"~^/danbooru2021%E3%80%81.*$" "/danbooru2021";
+"~^/cljs-out/.*$" "/404";
+"~^/ChatGPT-plugins$" "/gpt-3";
+"~^/blogs/wp-json.*$" "/blog/index";
+"~^/blog/2023-gwern-writing-online$" "/blog/2023-writing-online";
+"~^/aileenciel.jp/.*$" "http://aileenciel.jp/";
+"~^/banner/.*$" "/banner";
+"~^/sitio/$" "/site";
+"~^/BLOG/.*$" "/blog/index";
+"~^/4o$" "/doc/ai/nn/transformer/gpt/dall-e/4o/index";
+"~^/doc/ai/poetry/2019-12-16-gpt21.0$" "/doc/ai/poetry/2019-12-15-gpt21.5b-poetry-samples-topp090.txt";
+"~^/doc/cs/security/2001-12-02-treginaldgibons-isyoursonacomputerhacker.html$" "/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/darknet-market/2015-1$" "/doc/darknet-market/index";
+"~^/doc/darknet-market/2011-12-0$" "/doc/darknet-market/index";
+"~^/doc/.*wp-ok\..*$" "/doc/index";
+"~^/blog/2008$" "/blog/index#2008";
+"~^/blog/2009$" "/blog/index#2009";
+"~^/blog/2010$" "/blog/index#2010";
+"~^/blog/2011$" "/blog/index#2011";
+"~^/blog/2012$" "/blog/index#2012";
+"~^/blog/2013$" "/blog/index#2013";
+"~^/blog/2014$" "/blog/index#2014";
+"~^/blog/2015$" "/blog/index#2015";
+"~^/blog/2016$" "/blog/index#2016";
+"~^/blog/2017$" "/blog/index#2017";
+"~^/blog/2018$" "/blog/index#2018";
+"~^/blog/2019$" "/blog/index#2019";
+"~^/blog/2020$" "/blog/index#2020";
+"~^/blog/2021$" "/blog/index#2021";
+"~^/blog/2022$" "/blog/index#2022";
+"~^/blog/2023$" "/blog/index#2023";
+"~^/blog/2024$" "/blog/index#2024";
+"~^/blog/2025$" "/blog/index#2025";
+"~^/blog/2026$" "/blog/index#2026";
+"~^/blog/2027$" "/blog/index#2027";
+"~^/blog/2028$" "/blog/index#2028";
+"~^/blog/2029$" "/blog/index#2029";
+"~^/blog/2030$" "/blog/index#2030";
+"~^/97bw.*$" "/doc/index";
+"~^/doc/2012-hpmor-reviews.csv$" "/doc/lesswrong-survey/hpmor/2012-hpmor-reviews.csv";
+"~^/doc/statistics/1994-falk\.pdf.*$" "/doc/statistics/bayes/hope-function/1994-falk.pdf";
+"~^/note/regression$" "/doc/statistics/bayes/regression-to-mean/index";
+"~^/doc/statistics/2008-falk\.pdf.*$" "/doc/statistics/bias/2008-falk.pdf";
+"~^/!Kung$" "https://en.wikipedia.org/wiki/%C7%83Kung_people";
+"~^/\.hm$" "/index";
+"~^/pomo/$" "/404";
+"~^/Spacing-Repetition$" "/spaced-repetition";
+"~^/paced-repetitior$" "/spaced-repetition";
+"~^/static/font/dropcap/Yinit-W.ttf$" "/static/font/dropcap/yinit/Yinit-W.ttf";
+"~^/static/img/dot.php$" "/static/img/index";
+"~^/static/inlined-head.html$" "/static/include/inlined-head.html";
+"~^/blog/feed/$" "https://gwern.substack.com/feed";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
