--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12566,3 +12566,9 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-2-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-2.png";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-3-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-3.png";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-4-2.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-25-gwern-gpt4o-theburningoftheleaves-allthingsburn-4.png";
+"~^/4o$" "/doc/ai/nn/transformer/gpt/dall-e/4o/index";
+"~^/doc/cs/2008-10-07-drh4683-1961rcavictorcolortelevisionctc11-tvtunedtodeadchannelblackandwhitestatic.png.*$" "/doc/cs/2008-10-07-drh4683-1961rcavictorcolortelevisionctc11-tvtunedtodeadchannelblackandwhitestatic.jpg";
+"~^/doc/fiction/science-fiction/2010-ferguson.pdf.*$" "/doc/fiction/science-fiction/r-a-lafferty/2010-ferguson.pdf";
+"~^/doc/fiction/science-fiction/1992-jordan.pdf.*$" "/doc/fiction/gene-wolfe/1992-jordan.pdf";
+"~^/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminance.png.*$" "/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminence.png";
+"~^/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminanceinstudy2.png.*$" "/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminenceinstudy2.png";
