sync: check for missing Nginx MIME type overrides, and add first batch of missing ones

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -100,8 +100,17 @@ server {
           audio/wav wav;
           video/mp4 mkv;
           application/font-sfnt otf;
-          text/x-gtx gtx; # Gwern.net custom format
+          text/x-gtx gtx; # Gwern.net custom format; see </static/build/GTX.hs>
           application/x-par2 par2;
+          application/octet-stream dat elc idx t7;
+          application/x-hdf5 h5;
+          application/jsonl jsonl;
+          application/x-git-packed-objects pack; # 'octet-stream'?
+          application/octet-stream mtimes rev;
+          image/vnd.adobe.photoshop psd;
+          application/vnd.sqlite3 sqlite; # Or 'application/x-sqlite3'
+          font/woff2 woff2;
+          text/x-emacs-lisp el;
           }
 
         # force text files into UTF-8 to avoid 'mojibake':
