--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20631,6 +20631,13 @@ ortraitfaces-1.png";
 "~^/static/img/dot.php$" "/static/img/index";
 "~^/static/inlined-head.html$" "/static/include/inlined-head.html";
 "~^/blog/feed/$" "https://gwern.substack.com/feed";
+"~^/protiprudu.*$" "/404";
+"~^/pgunited.*$" "/404";
+"~^/collecting/.*$" "/collecting";
+"~^/%EF%BC%89.*$" "/index";
+"~^/LARPing/$" "/larping";
+"~^/Slowing-Moores-Law/$" "/slowing-moores-law";
+"~^/Subcultures$" "/subculture";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
