--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20638,6 +20638,69 @@ ortraitfaces-1.png";
 "~^/LARPing/$" "/larping";
 "~^/Slowing-Moores-Law/$" "/slowing-moores-law";
 "~^/Subcultures$" "/subculture";
+"~^/blog/2023-writing-online$" "/blog/2024-writing-online";
+"~^/doc/psychology/personality/psychopathy/2020-ok\.pdfCulture-and-conformity:-A-meta-analysis-of-studies-using-Asch$" "/doc/psychology/personality/psychopathy/2020-ok.pdf";
+"~^/doc/1926-wallas\.pdf.*$" "https://archive.org/details/dli.ernet.507402";
+"~^/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.*$" "/doc/personal/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/doc/rotten\.com/library/bio/black-sheep/notes/$" "/doc/rotten.com/library/bio/black-sheep/paris-hilton/notes/index.html";
+"~^/sleep/sites/.*$" "/404";
+"~^/file-manager/.*$" "/404";
+"~^/doc/biology/conferences/astmh99/abs(28|25)\.html$" "/404";
+"~^/doc/biology/about/iapacsub\.css\.html$" "/doc/biology/2000-iapac-norvir/iapacsub.css.html";
+"~^/static/js/(polyfill|cookie-consent|airbrake)-es5-bundle-.*\.js$" "/404";
+"~^/silk-road/static/(img/icon/icons\.svg|css/(style|head)\.css)\?v=[0-9]+%?'?$" "/404"; # Combined SVG/CSS rule
+"~^/newsletter/topic.*$" "/newsletter/index";
+"~^/modal/.*$" "/404";
+"~^/episerver/.*$" "/404";
+"~^/joki5.*$" "/404";
+"~^/history-of-elasticsearch.*$" "/404";
+"~^/doc/anime/eva/V4.*$" "/doc/anime/eva/index";
+"~^/doc/anime/eva/notenki-memoirs/2012-takeda-notenkimemoirs$" "/doc/anime/eva/notenki-memoirs/2002-takeda-notenkimemoirs";
+"~^/doc/ai/.*Starmark.*$" "/doc/ai/index";
+"~^/doc/2011-gwern-yourmorals.org/systems_feelings_process.php_files/$" "/doc/personal/2011-gwern-yourmorals.org/systems_feelings_process.html";
+"~^/[Bb]otox.*$" "https://en.wikipedia.org/wiki/Botox";
+"~^/bird.?brain.*$" "/doc/psychology/animal/bird/neuroscience/index";
+"~^/bird/brain.*$" "/doc/psychology/animal/bird/neuroscience/index";
+"~^/[a-z0-9-]+/cc\.js.*$" "/404";
+"~^/\.wdp.*$" "/404";
+"~^/\.rio.*$" "/404";
+"~^/Beat$" "/404";
+"~^/\.ninja$" "https://en.wikipedia.org/wiki/Ninja";
+"~^/.sydney$" "/doc/ai/nn/transformer/gpt/4/sydney/index";
+"~^/\.ae.*$" "/doc/404";
+"~^/littleboy/$" "/doc/anime/eva/little-boy/index";
+"~^/doc/biology/about/iapacsub.css$" "/doc/biology/2000-iapac-norvir/iapacsub.css";
+"~^/doc/biology/about/nav_conferences.gif$" "/doc/biology/2000-iapac-norvir/nav_conferences.gif";
+"~^/doc/biology/about/nav_joinIAPAC.gif$" "/doc/biology/2000-iapac-norvir/nav_joinIAPAC.gif";
+"~^/doc/biology/about/nav_mainpage.gif$" "/doc/biology/2000-iapac-norvir/nav_mainpage.gif";
+"~^/doc/biology/about/nav_publications.gif$" "/doc/biology/2000-iapac-norvir/nav_publications.gif";
+"~^/doc/biology/about/nav_whatsnew.gif$" "/doc/biology/2000-iapac-norvir/nav_whatsnew.gif";
+"~^/doc/biology/about/portability/$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/doc/biology/about/sub_header_logo.gif$" "/doc/biology/2000-iapac-norvir/sub_header_logo.gif";
+"~^/doc/biology/about/temperature/$" "/doc/biology/2000-iapac-norvir/temperature.html";
+"~^/doc/biology/about/thick_separator.gif$" "/doc/biology/2000-iapac-norvir/thick_separator.gif";
+"~^/doc/biology/about/thin_separator.gif$" "/doc/biology/2000-iapac-norvir/thin_separator.gif";
+"~^/doc/biology/about/tolerability/$" "/doc/biology/2000-iapac-norvir/tolerability.html";
+"~^/doc/biology/about/vertical_rule.gif$" "/doc/biology/2000-iapac-norvir/vertical_rule.gif";
+"~^/phobia$" "/doc/psychiatry/anxiety/index";
+"~^/WiFi/.*$" "/wifi";
+"~^/doc/cat/psych$" "/doc/cat/psychology/index";
+"~^/doc/darknet-market/rutor.png$" "/doc/gwern-darknet-market/rapture.png";
+"~^/doc/nootropic/quantified-self/2014-08-%EF%BF%BD$" "/doc/nootropic/quantified-self/2018-hanley.pdf";
+"~^/doc/radiance/index_split_018.html$" "/doc/radiance/index";
+"~^/doc/statistics/bias/1968-rosenthal\.pdf.*$" "/doc/statistics/bias/1968-rosenthal.pdf";
+"~^/\.pcx.*$" "/404";
+"~^/GPT-3Browse.*$" "/gpt-3";
+"~^/si$" "/silk-road";
+"~^/Mindset$" "/unseeing";
+"~^/contactus/.*$" "/links#contact";
+"~^/\.32-20.*$" "/404";
+"~^/[Nn]icotine/.*$" "/nicotine";
+"~^/note-taking$" "/spaced-repetition";
+"~^/Red/$" "/red";
+"~^/static/logo.png$" "/static/img/logo/logo.png";
+"~^/doc/darknet-market/aero.png$" "/static/img/logo/logo.png";
+"~^/Tool-AI//$" "/tool-ai";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
