--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12572,3 +12572,8 @@ default "";
 "~^/doc/fiction/science-fiction/1992-jordan.pdf.*$" "/doc/fiction/gene-wolfe/1992-jordan.pdf";
 "~^/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminance.png.*$" "/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminence.png";
 "~^/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminanceinstudy2.png.*$" "/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminenceinstudy2.png";
+"~^/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite.*$" "/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite3";
+"~^/doc/fiction/humor/2024-11-10-bpdohwhatajoy-tumblr-clippymeme-idealkconditionsdonotexistandwillneverhappen-766797325352960000.jpg.*$" "/doc/fiction/humor/2024-11-10-bpdohwhatajoy-tumblr-clippymeme-idealconditionsdonotexistandwillneverhappen-766797325352960000.jpg";
+"~^/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html.*$" "/doc/personal/2014-12-14-gwern-linuxadjustmenthearingloss.html";
+"~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain-2.pdf.*$" "/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf";
+"~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf.*$" "/doc/borges/1941-borges-asurveyoftheworkofherbertquain.pdf";
