--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20645,10 +20645,13 @@ ortraitfaces-1.png";
 "~^/doc/rotten\.com/library/bio/black-sheep/notes/$" "/doc/rotten.com/library/bio/black-sheep/paris-hilton/notes/index.html";
 "~^/sleep/sites/.*$" "/404";
 "~^/file-manager/.*$" "/404";
-"~^/doc/biology/conferences/astmh99/abs(28|25)\.html$" "/404";
+"~^/doc/biology/conferences/astmh[0-9]+/abs[0-9]+\.html$" "/404";
 "~^/doc/biology/about/iapacsub\.css\.html$" "/doc/biology/2000-iapac-norvir/iapacsub.css.html";
 "~^/static/js/(polyfill|cookie-consent|airbrake)-es5-bundle-.*\.js$" "/404";
-"~^/silk-road/static/(img/icon/icons\.svg|css/(style|head)\.css)\?v=[0-9]+%?'?$" "/404"; # Combined SVG/CSS rule
+"~^/static/js/.*-es5-bundle-.*\.js$" "/404";
+"~^/silk-road/static/css/head\.css\?v=[0-9]+%?'?$" "/404";
+"~^/silk-road/static/img/icon/icons\.svg\?v=[0-9]+%?'?$" "/404";
+"~^/silk-road/static/css/style\.css\?v=[0-9]+%?'?$" "/404";
 "~^/newsletter/topic.*$" "/newsletter/index";
 "~^/modal/.*$" "/404";
 "~^/episerver/.*$" "/404";
@@ -20697,10 +20700,10 @@ ortraitfaces-1.png";
 "~^/\.32-20.*$" "/404";
 "~^/[Nn]icotine/.*$" "/nicotine";
 "~^/note-taking$" "/spaced-repetition";
-"~^/Red/$" "/red";
+"~^/Red/.*$" "/red";
 "~^/static/logo.png$" "/static/img/logo/logo.png";
 "~^/doc/darknet-market/aero.png$" "/static/img/logo/logo.png";
-"~^/Tool-AI//$" "/tool-ai";
+"~^/Tool-AI/.*$" "/tool-ai";
 
 ## GENERAL blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.+/\$[12][0-9][0-9][0-9]$" "/404"; # disable attempts to bruteforce the inflation-adjuster like '/$1972' or '/doc/ai/nn/transformer/gpt/4/$2022'
