--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12577,3 +12577,5 @@ default "";
 "~^/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html.*$" "/doc/personal/2014-12-14-gwern-linuxadjustmenthearingloss.html";
 "~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain-2.pdf.*$" "/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf";
 "~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf.*$" "/doc/borges/1941-borges-asurveyoftheworkofherbertquain.pdf";
+"~^/doc/cs/end-to-end-principle/2019-Aghayev.pdf.*$" "/doc/cs/end-to-end-principle/2019-aghayev.pdf";
+"~^/doc/meta/2025-03-31-gwern-gwernnet-2025aprilfools-birthdaycatunfortunatetimeispassingmeme.png.*$" "/doc/meta/2025-03-31-gwern-gwernnet-2025aprilfools-birthdaycatunfortunatelytimeispassingmeme.png";
