--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -76,6 +76,7 @@ server {
           application/epub+zip epub;
           text/x-haskell hs;
           htm text/html;
+          html5 text/html;
           application/msaccess mdb;
           message/rfc822 mht;
           application/vnd.oasis.opendocument.text odt;
