--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -20647,7 +20647,9 @@ ortraitfaces-1.png";
 "~^/file-manager/.*$" "/404";
 "~^/doc/biology/conferences/astmh[0-9]+/abs[0-9]+\.html$" "/404";
 "~^/doc/biology/about/iapacsub\.css\.html$" "/doc/biology/2000-iapac-norvir/iapacsub.css.html";
-"~^/static/js/(polyfill|cookie-consent|airbrake)-es5-bundle-.*\.js$" "/404";
+"~^/static/js/polyfill-es5-bundle-.*\.js$" "/404";
+"~^/static/js/cookie-consent-es5-bundle-.*\.js$" "/404";
+"~^/static/js/airbrake-es5-bundle-.*\.js$" "/404";
 "~^/static/js/.*-es5-bundle-.*\.js$" "/404";
 "~^/silk-road/static/css/head\.css\?v=[0-9]+%?'?$" "/404";
 "~^/silk-road/static/img/icon/icons\.svg\?v=[0-9]+%?'?$" "/404";
