--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12572,10 +12572,13 @@ default "";
 "~^/doc/fiction/science-fiction/1992-jordan.pdf.*$" "/doc/fiction/gene-wolfe/1992-jordan.pdf";
 "~^/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminance.png.*$" "/doc/iq/high/smpy/2019-bernstein-figure1-clustersofeminence.png";
 "~^/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminanceinstudy2.png.*$" "/doc/iq/high/smpy/2019-bernstein-table2-descriptiestatisticsofeminenceinstudy2.png";
-"~^/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite.*$" "/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite3";
+"~^/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite$" "/doc/darknet-market/dnm-archive/file/dnmarchives_meta.sqlite3";
 "~^/doc/fiction/humor/2024-11-10-bpdohwhatajoy-tumblr-clippymeme-idealkconditionsdonotexistandwillneverhappen-766797325352960000.jpg.*$" "/doc/fiction/humor/2024-11-10-bpdohwhatajoy-tumblr-clippymeme-idealconditionsdonotexistandwillneverhappen-766797325352960000.jpg";
 "~^/doc/technology/2014-12-14-gwern-linuxadjustmenthearingloss.html.*$" "/doc/personal/2014-12-14-gwern-linuxadjustmenthearingloss.html";
 "~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain-2.pdf.*$" "/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf";
 "~^/doc/borges/1941-borges-anexaminationoftheworkofherbertquain.pdf.*$" "/doc/borges/1941-borges-asurveyoftheworkofherbertquain.pdf";
 "~^/doc/cs/end-to-end-principle/2019-Aghayev.pdf.*$" "/doc/cs/end-to-end-principle/2019-aghayev.pdf";
 "~^/doc/meta/2025-03-31-gwern-gwernnet-2025aprilfools-birthdaycatunfortunatetimeispassingmeme.png.*$" "/doc/meta/2025-03-31-gwern-gwernnet-2025aprilfools-birthdaycatunfortunatelytimeispassingmeme.png";
+"~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-29-gwern-gpt4o-cherrytreewithscatteringblossoms-timelapsephotographatnight.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-29-gwern-gpt4o-cherrytreewithscatteringblossoms-timelapsephotographatnight.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.jpg";
+"~^/doc/reinforcement-learning/meta-learning/1995-schmidhuber.pdf.*$" "/doc/reinforcement-learning/meta-learning/continual-learning/1995-schmidhuber.pdf";
