--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -12582,3 +12582,5 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-29-gwern-gpt4o-cherrytreewithscatteringblossoms-timelapsephotographatnight.png.*$" "/doc/ai/nn/transformer/gpt/dall-e/4o/2025-03-29-gwern-gpt4o-cherrytreewithscatteringblossoms-timelapsephotographatnight.jpg";
 "~^/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2025-03-31-gwern-midjourneyv6-scatteringcherryblossoms-scatteringblossoms-mondriantatamimat-shoji-2.jpg";
 "~^/doc/reinforcement-learning/meta-learning/1995-schmidhuber.pdf.*$" "/doc/reinforcement-learning/meta-learning/continual-learning/1995-schmidhuber.pdf";
+"~^/lorem-april-fools$" "/lorem-april-fools-2026";
+"~^/lorem-april-fools\.md$" "/lorem-april-fools-2026.md";
